--- a/pream/Base.lproj/LaunchScreen.storyboard
+++ b/pream/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,44 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NIT-4I-kDj">
+                                <rect key="frame" x="150" y="281" width="75" height="105"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="5vf-xw-gmc">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="74"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainTitle" translatesAutoresizingMaskIntoConstraints="NO" id="KSn-Bz-Tca">
+                                        <rect key="frame" x="0.0" y="86" width="75" height="19"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="KSn-Bz-Tca" firstAttribute="leading" secondItem="NIT-4I-kDj" secondAttribute="leading" id="0Pu-x4-hTt"/>
+                                    <constraint firstAttribute="trailing" secondItem="KSn-Bz-Tca" secondAttribute="trailing" id="5XZ-WT-2Yp"/>
+                                    <constraint firstItem="5vf-xw-gmc" firstAttribute="leading" secondItem="NIT-4I-kDj" secondAttribute="leading" id="8I0-Ay-KpX"/>
+                                    <constraint firstAttribute="bottom" secondItem="KSn-Bz-Tca" secondAttribute="bottom" id="Whi-kB-8ra"/>
+                                    <constraint firstItem="KSn-Bz-Tca" firstAttribute="top" secondItem="5vf-xw-gmc" secondAttribute="bottom" constant="12" id="Zld-yw-3FH"/>
+                                    <constraint firstAttribute="trailing" secondItem="5vf-xw-gmc" secondAttribute="trailing" id="ef2-8y-Oqs"/>
+                                    <constraint firstItem="5vf-xw-gmc" firstAttribute="top" secondItem="NIT-4I-kDj" secondAttribute="top" id="tdB-Vg-gSB"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NIT-4I-kDj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F8S-O7-Wlc"/>
+                            <constraint firstItem="NIT-4I-kDj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vHo-LO-KnX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MainIcon" width="70" height="74"/>
+        <image name="MainTitle" width="75" height="19"/>
+    </resources>
 </document>
