--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,23 +15,89 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CameraViewController" customModule="pream" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kuH-Pg-cpi">
-                                <rect key="frame" x="0.0" y="20" width="375" height="559"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kuH-Pg-cpi">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gB7-Nd-hGV">
-                                <rect key="frame" x="171" y="617" width="32" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Shot"/>
-                                <connections>
-                                    <action selector="didTabOnShotButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZHb-pn-m9y"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-P1-C8A" customClass="BlurView" customModule="pream" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="112"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="xS4-2b-9Yi"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xr0-Oz-7Yd">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="112"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7DG-UB-7q2" customClass="BlurView" customModule="pream" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="688" width="375" height="90"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="pMG-zJ-VUX"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEd-gE-dL9">
+                                <rect key="frame" x="0.0" y="688" width="375" height="90"/>
+                                <subviews>
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0jp-30-SkP" customClass="RoundView" customModule="pream" customModuleProvider="target">
+                                        <rect key="frame" x="162" y="19.666666666666629" width="51" height="51"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="51" id="BAE-Pn-UCF"/>
+                                            <constraint firstAttribute="width" constant="51" id="N3n-bN-WeI"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gB7-Nd-hGV" customClass="RoundButton" customModule="pream" customModuleProvider="target">
+                                        <rect key="frame" x="170" y="27.666666666666629" width="35" height="35"/>
+                                        <color key="backgroundColor" red="0.85098039215686272" green="0.4392156862745098" blue="0.47058823529411764" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="didTabOnShotButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZHb-pn-m9y"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="gB7-Nd-hGV" firstAttribute="top" secondItem="0jp-30-SkP" secondAttribute="top" constant="8" id="Crs-cw-tvu"/>
+                                    <constraint firstItem="0jp-30-SkP" firstAttribute="centerX" secondItem="VEd-gE-dL9" secondAttribute="centerX" id="Dhl-wB-4OY"/>
+                                    <constraint firstItem="gB7-Nd-hGV" firstAttribute="bottom" secondItem="0jp-30-SkP" secondAttribute="bottom" constant="-8" id="E6D-Mb-0UI"/>
+                                    <constraint firstItem="gB7-Nd-hGV" firstAttribute="trailing" secondItem="0jp-30-SkP" secondAttribute="trailing" constant="-8" id="f1i-tz-3ch"/>
+                                    <constraint firstItem="gB7-Nd-hGV" firstAttribute="leading" secondItem="0jp-30-SkP" secondAttribute="leading" constant="8" id="pcg-tQ-CCz"/>
+                                    <constraint firstItem="0jp-30-SkP" firstAttribute="centerY" secondItem="VEd-gE-dL9" secondAttribute="centerY" id="yRi-62-ncg"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xza-St-lua" customClass="BlurView" customModule="pream" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="778" width="375" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="trailing" secondItem="UrY-P1-C8A" secondAttribute="trailing" id="2cE-b4-UjU"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="VEd-gE-dL9" secondAttribute="leading" id="2rf-EQ-XaQ"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="trailing" secondItem="VEd-gE-dL9" secondAttribute="trailing" id="3f5-E9-A5O"/>
+                            <constraint firstAttribute="bottom" secondItem="xza-St-lua" secondAttribute="bottom" id="5Ai-Pe-fRe"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="87S-fH-Dgx"/>
+                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GwJ-1K-XjF"/>
+                            <constraint firstAttribute="bottom" secondItem="kuH-Pg-cpi" secondAttribute="bottom" id="JZw-A9-hsd"/>
+                            <constraint firstItem="xza-St-lua" firstAttribute="top" secondItem="7DG-UB-7q2" secondAttribute="bottom" id="N6g-Hc-e8A"/>
+                            <constraint firstItem="UrY-P1-C8A" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PC6-ID-KCF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UrY-P1-C8A" secondAttribute="trailing" id="Pkd-lC-va7"/>
+                            <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="leading" secondItem="UrY-P1-C8A" secondAttribute="leading" id="PtU-OT-p34"/>
+                            <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="top" secondItem="UrY-P1-C8A" secondAttribute="top" id="RiL-U0-Dgq"/>
+                            <constraint firstItem="UrY-P1-C8A" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Vd6-2l-1sq"/>
+                            <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="bottom" secondItem="UrY-P1-C8A" secondAttribute="bottom" id="Wqj-oM-dKG"/>
+                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="XBU-PF-vDy"/>
+                            <constraint firstItem="xza-St-lua" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aId-qZ-1Pi"/>
+                            <constraint firstAttribute="trailing" secondItem="xza-St-lua" secondAttribute="trailing" id="gev-3S-lwn"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="bottom" secondItem="VEd-gE-dL9" secondAttribute="bottom" id="heS-aB-V1S"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7DG-UB-7q2" secondAttribute="trailing" id="l9P-5h-maS"/>
+                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mW6-QP-zTY"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tqo-pQ-3WN"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="VEd-gE-dL9" secondAttribute="top" id="vFS-IL-8cX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -40,7 +106,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
+            <point key="canvasLocation" x="136.80000000000001" y="132.26600985221674"/>
         </scene>
     </scenes>
 </document>
