--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -102,6 +102,7 @@
                     </view>
                     <connections>
                         <outlet property="cameraPreviewImageView" destination="kuH-Pg-cpi" id="PQp-49-Is7"/>
+                        <outlet property="cameraShotButton" destination="gB7-Nd-hGV" id="MQU-3L-78T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
