add : 버튼 누르면 사진첩 켜기

--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -66,6 +66,9 @@
                                                 <state key="normal">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="tapLibraryButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8ej-pM-6Xa"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
