--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -30,7 +30,29 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xr0-Oz-7Yd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="112"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KTO-4I-KEq">
+                                        <rect key="frame" x="316" y="62" width="39" height="30"/>
+                                        <state key="normal" title="뒤집기"/>
+                                        <connections>
+                                            <action selector="convertCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uiN-16-5RY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTV-9d-nrG">
+                                        <rect key="frame" x="172.66666666666666" y="62" width="30" height="30"/>
+                                        <state key="normal" title="비율"/>
+                                        <connections>
+                                            <action selector="changeRatio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rOR-mE-tce"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lTV-9d-nrG" firstAttribute="centerX" secondItem="Xr0-Oz-7Yd" secondAttribute="centerX" id="1TM-4N-n6E"/>
+                                    <constraint firstAttribute="trailing" secondItem="KTO-4I-KEq" secondAttribute="trailing" constant="20" id="WYl-Wj-B35"/>
+                                    <constraint firstAttribute="bottom" secondItem="lTV-9d-nrG" secondAttribute="bottom" constant="20" id="amY-Iu-NM6"/>
+                                    <constraint firstAttribute="bottom" secondItem="KTO-4I-KEq" secondAttribute="bottom" constant="20" id="avW-JJ-Awy"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7DG-UB-7q2" customClass="BlurView" customModule="pream" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="688" width="375" height="90"/>
@@ -128,8 +150,10 @@
                     </view>
                     <connections>
                         <outlet property="cameraPreviewImageView" destination="kuH-Pg-cpi" id="PQp-49-Is7"/>
-                        <outlet property="libraryButton" destination="Avu-oK-WfQ" id="qPl-cZ-Fsq"/>
                         <outlet property="cameraShotButton" destination="gB7-Nd-hGV" id="MQU-3L-78T"/>
+                        <outlet property="changeRatioButton" destination="lTV-9d-nrG" id="qoL-04-RVh"/>
+                        <outlet property="convertCameraButton" destination="KTO-4I-KEq" id="8Dj-vT-lMC"/>
+                        <outlet property="libraryButton" destination="Avu-oK-WfQ" id="qPl-cZ-Fsq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
