--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -18,9 +18,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kuH-Pg-cpi">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVo-xt-JaS" customClass="CameraManager" customModule="pream" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                            </imageView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-P1-C8A" customClass="BlurView" customModule="pream" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="112"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -128,28 +129,28 @@
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="trailing" secondItem="VEd-gE-dL9" secondAttribute="trailing" id="3f5-E9-A5O"/>
                             <constraint firstAttribute="bottom" secondItem="xza-St-lua" secondAttribute="bottom" id="5Ai-Pe-fRe"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="87S-fH-Dgx"/>
-                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GwJ-1K-XjF"/>
-                            <constraint firstAttribute="bottom" secondItem="kuH-Pg-cpi" secondAttribute="bottom" id="JZw-A9-hsd"/>
+                            <constraint firstItem="PVo-xt-JaS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9zq-No-Mfw"/>
                             <constraint firstItem="xza-St-lua" firstAttribute="top" secondItem="7DG-UB-7q2" secondAttribute="bottom" id="N6g-Hc-e8A"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PC6-ID-KCF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UrY-P1-C8A" secondAttribute="trailing" id="Pkd-lC-va7"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="leading" secondItem="UrY-P1-C8A" secondAttribute="leading" id="PtU-OT-p34"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="top" secondItem="UrY-P1-C8A" secondAttribute="top" id="RiL-U0-Dgq"/>
+                            <constraint firstItem="PVo-xt-JaS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SOg-My-2AY"/>
+                            <constraint firstAttribute="bottom" secondItem="PVo-xt-JaS" secondAttribute="bottom" id="UWX-Tr-X0a"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Vd6-2l-1sq"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="bottom" secondItem="UrY-P1-C8A" secondAttribute="bottom" id="Wqj-oM-dKG"/>
-                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="XBU-PF-vDy"/>
                             <constraint firstItem="xza-St-lua" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aId-qZ-1Pi"/>
                             <constraint firstAttribute="trailing" secondItem="xza-St-lua" secondAttribute="trailing" id="gev-3S-lwn"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="bottom" secondItem="VEd-gE-dL9" secondAttribute="bottom" id="heS-aB-V1S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7DG-UB-7q2" secondAttribute="trailing" id="l9P-5h-maS"/>
-                            <constraint firstItem="kuH-Pg-cpi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mW6-QP-zTY"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tqo-pQ-3WN"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="VEd-gE-dL9" secondAttribute="top" id="vFS-IL-8cX"/>
+                            <constraint firstItem="PVo-xt-JaS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zZc-z4-jlj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="cameraPreviewImageView" destination="kuH-Pg-cpi" id="PQp-49-Is7"/>
+                        <outlet property="cameraManagerView" destination="PVo-xt-JaS" id="Nv3-gw-jNB"/>
                         <outlet property="cameraShotButton" destination="gB7-Nd-hGV" id="MQU-3L-78T"/>
                         <outlet property="changeRatioButton" destination="lTV-9d-nrG" id="qoL-04-RVh"/>
                         <outlet property="convertCameraButton" destination="KTO-4I-KEq" id="8Dj-vT-lMC"/>
