--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -13,7 +13,6 @@
         <!--Side Menu Navigation Controller-->
         <scene sceneID="9it-MK-TGc">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ft-2j-kfI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController modalPresentationStyle="overFullScreen" navigationBarHidden="YES" hidesBarsOnTap="YES" id="hVO-wv-l3o" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vLf-fv-Ypc">
                         <autoresizingMask key="autoresizingMask"/>
@@ -28,13 +27,13 @@
                         <segue destination="IHq-2D-shn" kind="relationship" relationship="rootViewController" id="Kdq-X4-jrd"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ft-2j-kfI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1604" y="120"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="kJI-YA-b36">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i4D-7S-kU2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="IHq-2D-shn" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pas-pG-fhL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
@@ -53,6 +52,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="8lY-8q-fXd"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i4D-7S-kU2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-801" y="120"/>
         </scene>
@@ -163,16 +163,38 @@
                                             <segue destination="uYa-M5-TAc" kind="presentation" id="2Bc-Ly-gbM"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2M-PG-ohc">
+                                        <rect key="frame" x="319" y="34" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="1FL-RP-TMV"/>
+                                            <constraint firstAttribute="height" constant="40" id="e3x-fJ-9LZ"/>
+                                        </constraints>
+                                        <state key="normal" image="group4"/>
+                                        <connections>
+                                            <action selector="showFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NSc-hq-y3U"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="d2M-PG-ohc" firstAttribute="centerY" secondItem="gB7-Nd-hGV" secondAttribute="centerY" id="SdZ-Tz-Mv6"/>
                                     <constraint firstItem="Avu-oK-WfQ" firstAttribute="leading" secondItem="VEd-gE-dL9" secondAttribute="leading" constant="17" id="dJe-aS-0Tu"/>
                                     <constraint firstItem="0jp-30-SkP" firstAttribute="centerX" secondItem="VEd-gE-dL9" secondAttribute="centerX" id="ec6-ZZ-APj"/>
                                     <constraint firstItem="0jp-30-SkP" firstAttribute="centerY" secondItem="Avu-oK-WfQ" secondAttribute="centerY" id="l3D-7y-GXO"/>
+                                    <constraint firstAttribute="trailing" secondItem="d2M-PG-ohc" secondAttribute="trailing" constant="16" id="s1H-Un-2Ab"/>
                                     <constraint firstAttribute="bottom" secondItem="0jp-30-SkP" secondAttribute="bottom" constant="20" id="sNI-4V-eVc"/>
                                     <constraint firstAttribute="height" constant="104" id="sNw-26-tnm"/>
                                 </constraints>
                             </view>
+                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OwD-Zi-m1h">
+                                <rect key="frame" x="0.0" y="579" width="375" height="95"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="atM-uh-LiM"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="Yh2-PV-88P" kind="embed" id="3Z3-I6-enj"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -185,7 +207,9 @@
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dn3-8O-wiM"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JD9-I8-XdS"/>
                             <constraint firstAttribute="bottom" secondItem="7DG-UB-7q2" secondAttribute="bottom" id="K0V-k4-HSj"/>
+                            <constraint firstItem="OwD-Zi-m1h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lha-hS-Chk"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SYf-2x-BoZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OwD-Zi-m1h" secondAttribute="trailing" id="UJl-gT-MHA"/>
                             <constraint firstItem="VEd-gE-dL9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Y3Q-tb-C4p"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="eDk-7A-u7e"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eSn-8T-sFJ"/>
@@ -194,6 +218,7 @@
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mfJ-ra-SPb"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="VEd-gE-dL9" secondAttribute="top" id="ple-de-Flz"/>
                             <constraint firstItem="xa9-a7-DXG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="sEB-WF-sOD"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="OwD-Zi-m1h" secondAttribute="bottom" id="xy2-w5-L5F"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -203,6 +228,7 @@
                         <outlet property="cameraShotButton" destination="gB7-Nd-hGV" id="MQU-3L-78T"/>
                         <outlet property="changeRatioButton" destination="lTV-9d-nrG" id="qoL-04-RVh"/>
                         <outlet property="convertCameraButton" destination="KTO-4I-KEq" id="8Dj-vT-lMC"/>
+                        <outlet property="filterView" destination="OwD-Zi-m1h" id="m5f-Ys-eFQ"/>
                         <outlet property="libraryButton" destination="Avu-oK-WfQ" id="qPl-cZ-Fsq"/>
                         <outlet property="topBlurView" destination="UrY-P1-C8A" id="cxD-lV-96u"/>
                     </connections>
@@ -219,8 +245,17 @@
             </objects>
             <point key="canvasLocation" x="860" y="132"/>
         </scene>
+        <!--FilterCollection-->
+        <scene sceneID="Vbf-eI-vdx">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FilterCollection" id="Yh2-PV-88P" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hUv-EU-yY4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="894" y="355"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="group4" width="33" height="33"/>
         <image name="group9" width="40" height="40"/>
         <image name="library" width="40" height="40"/>
         <image name="menu" width="40" height="40"/>
